force-app/main/default/objects/NS_Sandboxes__c/NS_Sandboxes__c.object-meta.xml
<CustomObject>
    <label>Instances</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Instances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>