force-app/main/default/objects/NS_Sandboxes__c/fields/Authentication_Type__c.field-meta.xml
<CustomField>
    <fullName>Authentication_Type__c</fullName>
    <label>Authentication Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OAUTH 1</fullName>
                <default>true</default>
                <label>OAUTH 1</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>