force-app/main/default/objects/NS_Sandboxes__c/fields/Consumer_Secrete__c.field-meta.xml
<CustomField>
    <fullName>Consumer_Secrete__c</fullName>
    <label>Consumer Secrete</label>
    <length>255</length>
    <type>Text</type>
</CustomField>