force-app/main/default/objects/NS_Sandboxes__c/fields/Signature_Method__c.field-meta.xml
<CustomField>
    <fullName>Signature_Method__c</fullName>
    <defaultValue>&quot;HMAC-SHA256&quot;</defaultValue>
    <label>Signature Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>