force-app/main/default/objects/NS_Sandboxes__c/fields/Token_Secrete__c.field-meta.xml
<CustomField>
    <fullName>Token_Secrete__c</fullName>
    <label>Token Secrete</label>
    <length>255</length>
    <type>Text</type>
</CustomField>